--- a/index.html
+++ b/index.html
@@ -1,11 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Github001</title>
-</head>
-<body>
-  My name is Ray Blackmon a "Dr3am Warrior"
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>A New Beginning</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="text1">
+      <span>H</span>
+      <span>E</span>
+      <span>L</span>
+      <span>L</span>
+      <span>O</span>
+    </div>
+    <div id="amperand">
+      <span>&</span>
+    </div>
+    <div class="text2">
+    <span default-value="6">W</span>
+    <span default-value="7">E</span>
+    <span>L</span>
+    <span>C</span>
+    <span>O</span>
+    <span>M</span>
+    <span>E</span>
+    <span id="exclamtion">!</span>
+  </div>
+  </body>
 </html>
