timing and sizing adjustments

--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
       <span>L</span>
       <span>O</span>
     </div>
-    <div id="amperand">
-      <span>&</span>
+    <div id="amp">
+      <span id="amp">&</span>
     </div>
     <div class="text2">
-    <span default-value="6">W</span>
-    <span default-value="7">E</span>
-    <span>L</span>
-    <span>C</span>
-    <span>O</span>
-    <span>M</span>
-    <span>E</span>
+    <span id="w">W</span>
+    <span id="w">E</span>
+    <span id="w">L</span>
+    <span id="w">C</span>
+    <span id="w">O</span>
+    <span id="w">M</span>
+    <span id="w">E</span>
     <span id="exclamtion">!</span>
   </div>
   </body>
