--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <span id="amp">&</span>
     </div>
     <div class="text2">
+      <a href="coverletter.html">
     <span id="w">W</span>
     <span id="w">E</span>
     <span id="w">L</span>
@@ -25,6 +26,7 @@
     <span id="w">O</span>
     <span id="w">M</span>
     <span id="w">E</span>
+  </a>
     <span id="exclamtion">!</span>
   </div>
   </body>
