welcome span consolidation

--- a/index.html
+++ b/index.html
@@ -19,15 +19,9 @@
     </div>
     <div class="text2">
       <a href="coverletter.html">
-    <span id="w">W</span>
-    <span id="w">E</span>
-    <span id="w">L</span>
-    <span id="w">C</span>
-    <span id="w">O</span>
-    <span id="w">M</span>
-    <span id="w">E</span>
-  </a>
-    <span id="exclamtion">!</span>
-  </div>
+        <span id="w">WELCOME</span>
+      </a>
+      <span id="exclamtion">!</span>
+    </div>
   </body>
 </html>
