--- a/coverletter.html
+++ b/coverletter.html
@@ -1,13 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cover Letter</title>
-</head>
+  <link rel="stylesheet" href="coverletter.css" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Cover Letter</title>
+  </head>
 
-<body>
-<p>Ray B. Blackmon</p>
+  <body>
+    
+    <div id="cover">
+      <img id="EJMT" src="./assets/EJMT.jpg" alt="" />
+    </div>
+    <h1>
+      <div>RAY B.</div>
+      <div>BLACKMON</div>
+    </h1>
+    <p id="quote">"I am not a product of my circumstances, I am a product of my decisions." -- Stephen Covey
+    </p>
   <hr>
-</body>
+        <p>Mathmatical logic and scientific concepts are the base structure for functionality of practically every process from rocket science to the budget of a household. It is this diversity of application that has intrigued me to indulge in the competence of technology.
+        </p>
+        <hr>
+  </body>
 </html>
